--- a/Milestone1/module2/css/style.css
+++ b/Milestone1/module2/css/style.css
@@ -29,3 +29,13 @@ h1
     color: white;
     text-align: center;
 }
+body{
+    background-color: rgb(84, 15, 15);
+}
+button{
+    display: block;
+    margin: auto;
+    padding: 10px;
+    border-radius: 10px;
+    border: none;
+}
